--- a/src/main/resources/frontend.rms.admin/src/app/components/restaurant/create-restaurant/create-restaurant.component.html
+++ b/src/main/resources/frontend.rms.admin/src/app/components/restaurant/create-restaurant/create-restaurant.component.html
@@ -14,13 +14,23 @@
           Моля въведете локация на ресторанта
         </mat-error>
       </mat-form-field>
-      <h3>Избери картинка</h3>
-      <button type="button" mat-raised-button (click)="fileInput.click()"> <mat-icon>attachment</mat-icon> Качи файл</button>
-      <span *ngIf="selectedImage" class="mat-active">
-        Избран файл: {{selectedImage}}
+      <h3>Избери картинка за корицата</h3>
+      <button type="button" mat-raised-button (click)="fileInputCover.click()"> <mat-icon>attachment</mat-icon> Качи файл</button>
+      <span *ngIf="selectedCoverImage" class="mat-active">
+        Избран файл: {{selectedCoverImage}}
       </span>
-      <input hidden (change)="onFileSelect($event)" #fileInput type="file" id="file">
-      <button mat-raised-button color="primary" class="add-restaurant-button text-white" (click)="addRestaurant()"> <mat-icon>add</mat-icon> <span>Добави</span></button>
+      <input hidden (change)="onFileSelect($event, 'coverImage')" #fileInputCover type="file" id="file">
+      <h3>Избери лого на ресторанта</h3>
+      <button type="button" mat-raised-button (click)="fileInputLogo.click()"> <mat-icon>attachment</mat-icon> Качи файл</button>
+      <span *ngIf="selectedLogoImage" class="mat-active">
+        Избран файл: {{selectedLogoImage}}
+      </span>
+      <input hidden (change)="onFileSelect($event, 'logoImage')" #fileInputLogo type="file" id="file2">
+      <br>
+      <br>
+      <button mat-raised-button color="primary" class="add-restaurant-button text-white" (click)="addRestaurant()">
+        <mat-icon>add</mat-icon> <span>Добави</span>
+      </button>
     </form>
   </mat-card-content>
 </mat-card>
