--- a/src/main/resources/frontend.rms.admin/src/app/components/restaurant/list-restaurants/list-restaurants.component.html
+++ b/src/main/resources/frontend.rms.admin/src/app/components/restaurant/list-restaurants/list-restaurants.component.html
@@ -40,7 +40,7 @@
       <mat-card-subtitle>{{restaurant.location}}</mat-card-subtitle>
     </mat-card-header>
     <mat-card-content class="text-center">
-      <img mat-card-xl-image src="data:{{restaurant.contentType}};base64,{{restaurant.image}}" alt="Restaurant photo">
+      <img mat-card-xl-image src="{{restaurant.coverImageUrl}}" alt="Restaurant photo">
     </mat-card-content>
   </mat-card>
 
