--- a/src/main/resources/frontend.rms.admin/src/app/app.component.html
+++ b/src/main/resources/frontend.rms.admin/src/app/app.component.html
@@ -9,7 +9,7 @@
   </mat-toolbar>
 <!-- END HEADER -->
 <mat-drawer-container>
-  <mat-drawer mode="side" [opened]="sideBarOpened">
+  <mat-drawer mode="side" [opened]="true">
     <app-navigation></app-navigation>
   </mat-drawer>
 
