--- a/src/main/resources/frontend.rms.admin/src/app/components/common/login/login.component.html
+++ b/src/main/resources/frontend.rms.admin/src/app/components/common/login/login.component.html
@@ -1,7 +1,7 @@
 <mat-card>
   <mat-card-content>
     <form [formGroup]="form" (ngSubmit)="login()">
-      <h2>Вход ТЕСТ</h2>
+      <h2>Вход</h2>
       <img mat-card-sm-image src="../../assets/images/logo.png" alt="">
       <mat-form-field class="full-width-input">
         <input matInput placeholder="Потребителско име/Имейл" formControlName="username" required>
