--- a/src/main/resources/frontend.rms.admin/src/app/components/product/product-list/product-list.component.css
+++ b/src/main/resources/frontend.rms.admin/src/app/components/product/product-list/product-list.component.css
@@ -83,3 +83,8 @@ tr.example-element-row:not(.example-expanded-row):active {
   position: relative;
   left: 50%;
 }
+
+.reorder-button {
+  display: flex;
+  align-items: center;
+}
