--- a/src/main/resources/frontend.rms.admin/src/app/components/restaurant/create-restaurant/create-restaurant.component.html
+++ b/src/main/resources/frontend.rms.admin/src/app/components/restaurant/create-restaurant/create-restaurant.component.html
@@ -16,6 +16,24 @@
               Моля въведете локация на ресторанта
             </mat-error>
           </mat-form-field>
+         <div class="row">
+           <div class="col-md-6">
+             <mat-form-field class="full-width-input">
+               <input type="time" matInput placeholder="От" formControlName="workingHoursStart" required>
+               <mat-error>
+                 Моля въведете работно време на ресторанта
+               </mat-error>
+             </mat-form-field>
+           </div>
+           <div class="col-md-6">
+             <mat-form-field class="full-width-input">
+               <input type="time" matInput placeholder="До" formControlName="workingHoursEnd" required>
+               <mat-error>
+                 Моля въведете работно време на ресторанта
+               </mat-error>
+             </mat-form-field>
+           </div>
+         </div>
           <div class="loading-spinner" *ngIf="spinner">
             <mat-progress-spinner
               class="example-margin"
